--- a/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb
+++ b/Data_Analysis/1-Numpy/Practica/Desafio/Desafio.ipynb
@@ -88,6 +88,373 @@
    "source": [
     "cual_es_mi_reto(fecha='08-04-1989')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Fallo\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['O' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['X' 'O' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['X' 'X' 'O' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['X' 'X' 'X' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['X' 'X' 'X' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['X' 'X' 'X' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['X' 'X' 'X' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'X' 'O' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['X' 'X' 'X' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'X' 'X' 'O' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['X' 'X' 'X' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'X' 'X' 'X' 'O' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['X' 'X' 'X' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'X' 'X' 'X' 'X' 'O' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' 'X']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['-' ' ' ' ' ' ' ' ' ' ' 'X' ' ' ' ' ' ']\n",
+      " ['X' 'X' 'X' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'X' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'X' 'X' 'X' 'X' 'X' 'O' ' ' ' ']]\n",
+      "Tocado\n",
+      "¡Has hundido todos los barcos!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "tablero = np.full((10, 10), \" \")\n",
+    "\n",
+    "print(tablero)\n",
+    "\n",
+    "def barco(tablero, longitud):\n",
+    "    '''\n",
+    "    Mediante esta función colocamos un barco de 4 posiciones en el tablero.\n",
+    "\n",
+    "    Input:\n",
+    "    tablero: le indicamos el tamaño del tablero con el que estamos jugando\n",
+    "\n",
+    "    Output:\n",
+    "\n",
+    "    Barco de 4 posiciones en una dirección aleatoria\n",
+    "    '''\n",
+    "    while True:\n",
+    "        orientacion = random.choice(['N', 'S', 'E', 'O']) #se asigna una dirección aletoria de 4 posibles al barco de 4 posiciones\n",
+    "\n",
+    "        if orientacion == 'N':\n",
+    "            fila = random.randint(longitud -1, 9)\n",
+    "            columna = random.randint(0, 9)\n",
+    "            posicion = [(fila - i, columna) for i in range(longitud)]\n",
+    "\n",
+    "        elif orientacion == 'S':\n",
+    "            fila = random.randint(0, 9 - longitud + 1)\n",
+    "            columna = random.randint(0, 9)\n",
+    "            posicion = [(fila + i, columna) for i in range(longitud)]\n",
+    "\n",
+    "        elif orientacion == 'E':\n",
+    "            fila = random.randint(0, 9)\n",
+    "            columna = random.randint(0, 9 - longitud + 1)\n",
+    "            posicion = [(fila, columna + i) for i in range(longitud)]\n",
+    "\n",
+    "        else:\n",
+    "            fila = random.randint(0, 9)\n",
+    "            columna = random.randint(longitud - 1, 9)\n",
+    "            posicion = [(fila, columna - i) for i in range(longitud)]\n",
+    "\n",
+    "        # Verificar si las posiciones son válidas y no hay otros barcos en ellas\n",
+    "        if all(0 <= fila < 10 and 0 <= columna < 10 and tablero[fila, columna] == ' ' for fila, columna in posicion):\n",
+    "            for fila, columna in posicion:\n",
+    "                tablero[fila, columna] = 'O'\n",
+    "            break\n",
+    "\n",
+    "\n",
+    "barco1 = int(input(\"Elija el tamaño del barco 1 (1 - 4): \"))\n",
+    "barco(tablero, barco1)\n",
+    "\n",
+    "barco2 = int(input(\"Elija el tamaño del barco 2 (1 - 4): \"))\n",
+    "barco(tablero, barco2)\n",
+    "\n",
+    "barco3 = int(input(\"Elija el tamaño del barco 3 (1 - 4): \"))\n",
+    "barco(tablero, barco3)\n",
+    "\n",
+    "barco4 = int(input(\"Elija el tamaño del barco 4 (1 - 4): \"))\n",
+    "barco(tablero, barco4)\n",
+    "\n",
+    "barco5 = int(input(\"Elija el tamaño del barco 5 (1 - 4): \"))\n",
+    "barco(tablero, barco5)\n",
+    "\n",
+    "print(tablero)\n",
+    "\n",
+    "\n",
+    "def disparar(tablero):\n",
+    "    '''\n",
+    "    Comienza el juego de los barquitos con el tablero de 10 x 10\n",
+    "    '''\n",
+    "\n",
+    "    while True:\n",
+    "        print(tablero)\n",
+    "        \n",
+    "    \n",
+    "        # Ingresar las coordenadas del disparo 0 - 9\n",
+    "        fila = int(input(\"Ingrese fila (0-9): \"))\n",
+    "        columna = int(input(\"Ingrese columna (0-9): \"))\n",
+    "    \n",
+    "        \n",
+    "        if tablero[fila, columna] == \"O\":\n",
+    "            print(\"Tocado\")\n",
+    "            tablero[fila, columna] = \"X\"  \n",
+    "\n",
+    "        elif tablero[fila, columna] == \"X\":\n",
+    "            print(\"Ya habías elegido esta casilla\")\n",
+    "            tablero[fila, columna] = \"X\"\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Fallo\")\n",
+    "            tablero[fila, columna] = \"-\"  \n",
+    "    \n",
+    "        # Si todos los barcos se han hundido\n",
+    "        if np.sum(tablero == \"O\") == 0:\n",
+    "            print(\"¡Has hundido todos los barcos!\")\n",
+    "            break\n",
+    "\n",
+    "\n",
+    "disparar(tablero)"
+   ]
   }
  ],
  "metadata": {
@@ -106,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
