--- a/Data_Analysis/1-Numpy/Practica/Ejercicios Numpy I.ipynb
+++ b/Data_Analysis/1-Numpy/Practica/Ejercicios Numpy I.ipynb
@@ -19,15 +19,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.21.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n"
    ]
@@ -42,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +45,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "my_array = np.arange(0, 10)\n",
+    "print(my_array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +73,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "arrayTrue = np.ones(shape=(3, 3), dtype=bool)\n",
+    "print(arrayTrue)"
+   ]
   },
   {
    "cell_type": "code",
@@ -107,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +118,11 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(my_array)\n",
+    "print(my_array % 2 != 0)\n",
+    "print(my_array[my_array % 2 != 0])"
+   ]
   },
   {
    "cell_type": "code",
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +160,13 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "for i in my_array:\n",
+    "    if i % 2 != 0:\n",
+    "        my_array[i] = -1\n",
+    "\n",
+    "print(my_array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +189,12 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "my_array = np.arange(0, 10)\n",
+    "\n",
+    "nuevo_array = np.where(my_array % 2 != 0, -1, my_array)\n",
+    "print(nuevo_array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +218,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(my_array.reshape(2, 5))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -234,12 +249,17 @@
        "       [1, 1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "a = np.arange(10).reshape(2,-1)\n",
+    "b = np.repeat(1, 10).reshape(2,-1)\n",
+    "\n",
+    "np.concatenate((a, b), axis=0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -266,12 +286,17 @@
        "       [5, 6, 7, 8, 9, 1, 1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "a = np.arange(10).reshape(2,-1)\n",
+    "b = np.repeat(1, 10).reshape(2,-1)\n",
+    "\n",
+    "np.concatenate((a, b), axis=1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,12 +322,17 @@
        "array([2, 4])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "a = np.array([1,2,3,2,3,4,3,4,5,6])\n",
+    "b = np.array([7,2,10,2,7,4,9,4,9,8])\n",
+    "\n",
+    "np.intersect1d(b, a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function concatenate in module numpy:\n",
+      "Help on _ArrayFunctionDispatcher in module numpy:\n",
       "\n",
       "concatenate(...)\n",
       "    concatenate((a1, a2, ...), axis=0, out=None, dtype=None, casting=\"same_kind\")\n",
@@ -417,7 +447,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "help(np.concatenate)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -433,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -441,14 +473,19 @@
      "output_type": "stream",
      "text": [
       "[0 1 2 3 4 5 6 7 8 9]\n",
-      "[ 0 10 20 30 40 50 60 70 80 90]\n",
       "0\n",
       "9\n",
-      "[1 2 3 4 5 6 7]\n"
+      "[0 1 2 3 4 5 6 7]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "my_array = np.arange(0, 10)\n",
+    "print(my_array)\n",
+    "print(my_array[0])\n",
+    "print(my_array[-1])\n",
+    "print(my_array[0:8])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -460,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +513,15 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "my_matrix = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "\n",
+    "print(my_matrix)\n",
+    "\n",
+    "print(my_matrix.ndim)\n",
+    "print(my_matrix.shape)\n",
+    "print(my_matrix.size)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -492,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -501,12 +546,15 @@
        "array([ 1,  4,  7, 10, 13, 16, 19, 22, 25, 28, 31, 34, 37, 40, 43, 46, 49])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ejer_14 = np.arange(1, 50, 3)\n",
+    "ejer_14"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -522,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +581,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "ejer_15 = np.arange(4, 1, -0.25)\n",
+    "print(ejer_15)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -586,7 +637,44 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "from skimage.io import imread\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "imagen = imread(\"./img/numpy.png\")\n",
+    "print(type(imagen))\n",
+    "print(imagen.shape)\n",
+    "\n",
+    "plt.imshow(imagen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'skimage'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\manue\\OneDrive\\Documentos\\GitHub\\DS_PT_09_2023\\Data_Analysis\\1-Numpy\\Practica\\Ejercicios Numpy I.ipynb Cell 37\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/1-Numpy/Practica/Ejercicios%20Numpy%20I.ipynb#X64sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mskimage\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m \u001b[39mimport\u001b[39;00m imread\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/1-Numpy/Practica/Ejercicios%20Numpy%20I.ipynb#X64sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/1-Numpy/Practica/Ejercicios%20Numpy%20I.ipynb#X64sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m imagen \u001b[39m=\u001b[39m imread(\u001b[39m\"\u001b[39m\u001b[39m./img/numpy.png\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'skimage'"
+     ]
+    }
+   ],
+   "source": [
+    "from skimage.io import imread\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "imagen = imread(\"./img/numpy.png\")\n",
+    "print(type(imagen))\n",
+    "print(imagen.shape)\n",
+    "\n",
+    "plt.imshow(imagen)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -598,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -608,22 +696,18 @@
       "[[1]\n",
       " [2]\n",
       " [3]\n",
-      " [4]]\n"
+      " [4]]\n",
+      "[[1 2]\n",
+      " [3 4]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4]])"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ejer_17 = np.array([[x] for x in range(1, 5)])\n",
+    "print(ejer_17)\n",
+    "\n",
+    "print(ejer_17.reshape(2, 2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -635,44 +719,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[19 13 14]\n",
-      "  [10 19 11]\n",
-      "  [19 11 14]\n",
-      "  [11 18 12]\n",
-      "  [14 12 15]]\n",
+      "[[[18  2 10]\n",
+      "  [ 7  4  8]\n",
+      "  [14  1 19]\n",
+      "  [ 1  4  5]\n",
+      "  [ 1 16  4]]\n",
       "\n",
-      " [[19 16 12]\n",
-      "  [15 15 11]\n",
-      "  [14 15 10]\n",
-      "  [12 12 13]\n",
-      "  [15 19 15]]\n",
+      " [[19  2 11]\n",
+      "  [ 8  7 16]\n",
+      "  [ 3  2  3]\n",
+      "  [ 1 19 16]\n",
+      "  [16  4 10]]\n",
       "\n",
-      " [[12 17 18]\n",
-      "  [15 16 13]\n",
-      "  [15 11 12]\n",
-      "  [13 16 19]\n",
-      "  [19 18 10]]\n",
+      " [[16 13  1]\n",
+      "  [ 5 15 19]\n",
+      "  [14  2 16]\n",
+      "  [13  6 19]\n",
+      "  [ 9  6 12]]\n",
       "\n",
-      " [[13 17 14]\n",
-      "  [18 11 12]\n",
-      "  [14 11 15]\n",
-      "  [15 16 11]\n",
-      "  [19 10 15]]]\n"
+      " [[ 3  7  7]\n",
+      "  [16 12  4]\n",
+      "  [ 9  1 12]\n",
+      "  [ 4 16 15]\n",
+      "  [13  2 14]]]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "ejer_18 = np.random.randint(1, 20, size=(4, 5, 3))\n",
+    "print(ejer_18)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +772,11 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(ejer_18.ndim)\n",
+    "print(ejer_18.shape)\n",
+    "print(ejer_18.size)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -697,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +808,32 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "ejer_19 = np.zeros(shape=(10, 1), dtype=bool)\n",
+    "\n",
+    "print(ejer_19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, False, False],\n",
+       "       [False, False, False, False, False]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_19.reshape(2, 5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -737,31 +853,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[18 19 11 12 12 19]\n",
-      "  [15 14 11 16 13 11]]\n",
+      "[[[10 18 11 10 11 11]\n",
+      "  [16 14 16 19 10 18]]\n",
       "\n",
-      " [[14 19 18 14 16 12]\n",
-      "  [19 16 12 15 12 17]]\n",
+      " [[12 17 15 15 16 11]\n",
+      "  [10 10 15 12 14 15]]\n",
       "\n",
-      " [[15 11 11 17 15 14]\n",
-      "  [12 18 18 17 18 10]]\n",
+      " [[17 11 12 13 14 14]\n",
+      "  [14 10 18 15 17 17]]\n",
       "\n",
-      " [[18 19 12 10 17 16]\n",
-      "  [10 17 15 11 18 15]]\n",
+      " [[17 13 13 11 16 10]\n",
+      "  [19 13 13 10 17 16]]\n",
       "\n",
-      " [[19 16 13 17 17 15]\n",
-      "  [13 18 17 13 15 19]]]\n"
+      " [[14 11 15 10 11 16]\n",
+      "  [16 18 10 10 12 15]]]\n",
+      "60\n",
+      "3\n",
+      "(5, 2, 6)\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x =np.random.randint(10, 20, size = (5,2,6))\n",
+    "\n",
+    "print(x)\n",
+    "print(x.size)\n",
+    "print(x.ndim)\n",
+    "print(x.shape)"
+   ]
   },
   {
    "cell_type": "code",
@@ -787,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
