--- a/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb
+++ b/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,9 +93,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table Cerveza already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\manue\\OneDrive\\Documentos\\GitHub\\DS_PT_09_2023\\Data_Analysis\\7-Bases_de_datos\\SQL\\SQL_Python\\ejercicio\\practica_sql_mrr.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m query_cerveza \u001b[39m=\u001b[39m \u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mCREATE TABLE Cerveza (\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m    CodC VARCHAR(3),\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m)\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m crsr\u001b[39m.\u001b[39;49mexecute(query_cerveza)\n",
+      "\u001b[1;31mOperationalError\u001b[0m: table Cerveza already exists"
+     ]
+    }
+   ],
    "source": [
     "query_cerveza = \"\"\"\n",
     "CREATE TABLE Cerveza (\n",
@@ -118,19 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "near \")\": syntax error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\manue\\OneDrive\\Documentos\\GitHub\\DS_PT_09_2023\\Data_Analysis\\7-Bases_de_datos\\SQL\\SQL_Python\\ejercicio\\practica_sql_mrr.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m query_bares\u001b[39m=\u001b[39m \u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mCREATE TABLE Bares (\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m    CodB VARCHAR(3),\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m)\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X16sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X16sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m crsr\u001b[39m.\u001b[39;49mexecute(query_bares)\n",
-      "\u001b[1;31mOperationalError\u001b[0m: near \")\": syntax error"
-     ]
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x184c2d29d40>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -139,7 +150,7 @@
     "    CodB VARCHAR(3),\n",
     "    Nombre VARCHAR(50),\n",
     "    Cif VARCHAR(10),\n",
-    "    Localidad VARCHAR(50),\n",
+    "    Localidad VARCHAR(50)\n",
     ")\n",
     "\"\"\"\n",
     "\n",
@@ -159,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_bares = \"\"\"\n",
+    "query_empleados = \"\"\"\n",
     "CREATE TABLE Empleados (\n",
     "    CodE VARCHAR(2),\n",
     "    Nombre VARCHAR(50),\n",
@@ -167,7 +178,7 @@
     ")\n",
     "\"\"\"\n",
     "\n",
-    "crsr.execute(query_bares)"
+    "crsr.execute(query_empleados)"
    ]
   },
   {
@@ -175,6 +186,168 @@
    "metadata": {},
    "source": [
     "### Tabla Reparto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Insertar Datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x184c2d29d40>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Insertamos datos en la tabla Cerveza\n",
+    "query_insert = \"\"\"\n",
+    "INSERT INTO Cerveza VALUES\n",
+    "('01', 'Botella', 0.2, 3600),\n",
+    "('02', 'Botella', 0.33, 1200),\n",
+    "('03', 'Lata', 0.33, 2400),\n",
+    "('04', 'Botella', 1, 288),\n",
+    "('05', 'Barril', 60, 30)\n",
+    "\"\"\"\n",
+    "\n",
+    "crsr.execute(query_insert)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CodC</th>\n",
+       "      <th>Enavase</th>\n",
+       "      <th>Capacidad</th>\n",
+       "      <th>Stock</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01</td>\n",
+       "      <td>Botella</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>3600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>02</td>\n",
+       "      <td>Botella</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>03</td>\n",
+       "      <td>Lata</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>2400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>04</td>\n",
+       "      <td>Botella</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>05</td>\n",
+       "      <td>Barril</td>\n",
+       "      <td>60.00</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  CodC  Enavase  Capacidad  Stock\n",
+       "0   01  Botella       0.20   3600\n",
+       "1   02  Botella       0.33   1200\n",
+       "2   03     Lata       0.33   2400\n",
+       "3   04  Botella       1.00    288\n",
+       "4   05   Barril      60.00     30"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql(\"SELECT * FROM Cerveza\", connection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insertamos datos en la tabla Reparto\n",
+    "query_insert2 = \"\"\"\n",
+    "INSERT INTO Reparto (CodE, CodC, Fecha, Cantidad) VALUES\n",
+    "('1', '001', '01', '10/21/05', 240),\n",
+    "(2, 001, 02, 10/21/05, 48),\n",
+    "(3, 003, 01, 10/21/05, 240),\n",
+    "(4, 004, 01, 10/21/05, 240),\n",
+    "(5, 005, 01, 10/21/05, 240)\n",
+    "\"\"\"\n",
+    "\n",
+    "crsr.execute(query_insert2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql(\"SELECT * FROM Reparto\", connection)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Respuestas"
    ]
   }
  ],
