--- a/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb
+++ b/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,17 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cerveza\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = crsr.execute(\"SELECT name FROM sqlite_master WHERE type='table'\")\n",
     "for name in res:\n",
@@ -93,29 +85,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "table Cerveza already exists",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\manue\\OneDrive\\Documentos\\GitHub\\DS_PT_09_2023\\Data_Analysis\\7-Bases_de_datos\\SQL\\SQL_Python\\ejercicio\\practica_sql_mrr.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m query_cerveza \u001b[39m=\u001b[39m \u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mCREATE TABLE Cerveza (\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m    CodC VARCHAR(3),\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m)\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/manue/OneDrive/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/7-Bases_de_datos/SQL/SQL_Python/ejercicio/practica_sql_mrr.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m crsr\u001b[39m.\u001b[39;49mexecute(query_cerveza)\n",
-      "\u001b[1;31mOperationalError\u001b[0m: table Cerveza already exists"
-     ]
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x13f57cb3dc0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "query_cerveza = \"\"\"\n",
-    "CREATE TABLE Cerveza (\n",
+    "CREATE TABLE cerveza (\n",
     "    CodC VARCHAR(3),\n",
-    "    Enavase VARCHAR(50),\n",
+    "    Envase VARCHAR(50),\n",
     "    Capacidad FLOAT,\n",
     "    Stock INT\n",
-    ")\n",
+    ") \n",
     "\"\"\"\n",
     "\n",
     "crsr.execute(query_cerveza)\n"
@@ -130,28 +121,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x184c2d29d40>"
+       "<sqlite3.Cursor at 0x13f57cb3dc0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query_bares = \"\"\"\n",
-    "CREATE TABLE Bares (\n",
-    "    CodB VARCHAR(3),\n",
+    "CREATE TABLE bares (\n",
+    "    CodB VARCHAR(4),\n",
     "    Nombre VARCHAR(50),\n",
     "    Cif VARCHAR(10),\n",
     "    Localidad VARCHAR(50)\n",
-    ")\n",
+    ")    \n",
     "\"\"\"\n",
     "\n",
     "crsr.execute(query_bares)"
@@ -166,16 +157,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x13f57cb3dc0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query_empleados = \"\"\"\n",
-    "CREATE TABLE Empleados (\n",
+    "CREATE TABLE empleados (\n",
     "    CodE VARCHAR(2),\n",
     "    Nombre VARCHAR(50),\n",
-    "    Sueldo(10),\n",
-    ")\n",
+    "    Sueldo INT\n",
+    ")    \n",
     "\"\"\"\n",
     "\n",
     "crsr.execute(query_empleados)"
@@ -189,10 +191,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x13f57cb3dc0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_reparto = \"\"\"\n",
+    "CREATE TABLE reparto (\n",
+    "    CodE VARCHAR(2),\n",
+    "    CodB VARCHAR(4),\n",
+    "    CodC VARCHAR(3),\n",
+    "    Fecha DATE,\n",
+    "    Cantidad INT\n",
+    ")    \n",
+    "\"\"\"\n",
+    "\n",
+    "crsr.execute(query_reparto)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Insertar Datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x13f57cb3dc0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Insertamos datos en la tabla cerveza\n",
+    "query_insert = \"\"\"\n",
+    "INSERT INTO cerveza VALUES\n",
+    "('01', 'Botella', 0.2, 3600),\n",
+    "('02', 'Botella', 0.33, 1200),\n",
+    "('03', 'Lata', 0.33, 2400),\n",
+    "('04', 'Botella', 1, 288),\n",
+    "('05', 'Barril', 60, 30)\n",
+    "\"\"\"\n",
+    "crsr.execute(query_insert)"
    ]
   },
   {
@@ -203,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x184c2d29d40>"
+       "<sqlite3.Cursor at 0x13f57cb3dc0>"
       ]
      },
      "execution_count": 10,
@@ -212,22 +273,124 @@
     }
    ],
    "source": [
-    "# Insertamos datos en la tabla Cerveza\n",
-    "query_insert = \"\"\"\n",
-    "INSERT INTO Cerveza VALUES\n",
-    "('01', 'Botella', 0.2, 3600),\n",
-    "('02', 'Botella', 0.33, 1200),\n",
-    "('03', 'Lata', 0.33, 2400),\n",
-    "('04', 'Botella', 1, 288),\n",
-    "('05', 'Barril', 60, 30)\n",
+    "# Insertamos datos en la tabla reparto\n",
+    "query_insert2 = \"\"\"\n",
+    "INSERT INTO reparto (CodE, CodB, CodC, Fecha, Cantidad) VALUES\n",
+    "('1','001','01','2005-10-21',240),\n",
+    "('1','001','02','2005-10-21',48),\n",
+    "('1','002','03','2005-10-22',60),\n",
+    "('1','004','05','2005-10-22',4),\n",
+    "('2','002','03','2005-10-22',48),\n",
+    "('2','002','05','2005-10-23',2),\n",
+    "('2','004','00','2005-10-23',480),\n",
+    "('2','004','02','2005-10-24',72),\n",
+    "('3','003','03','2005-10-24',48),\n",
+    "('3','003','04','2005-10-25',20)\n",
     "\"\"\"\n",
     "\n",
-    "crsr.execute(query_insert)"
+    "crsr.execute(query_insert2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Insertamos datos en la tabla Bares\n",
+    "\n",
+    "bares=pd.DataFrame({\n",
+    "                    \"CodB\": [\"001\",\"002\",\"003\",\"004\"],\n",
+    "                    \"Nombre\": [\"Stop\",\"Las Vegas\",\"Club Social\",\"Otra Ronda\"],\n",
+    "                    \"Cif\": [\"11111111X\",\"22222222Y\",None,\"33333333Z\"],\n",
+    "                    \"Localidad\":[\"Villa Botijo\",\"Villa Botijo\",\"Las Ranas\",\"La Esponja\"]\n",
+    "                    })\n",
+    "bares\n",
+    "\n",
+    "bares.to_sql(name='bares',con=connection,if_exists=\"append\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Insertamos datos en la tabla Bares\n",
+    "\n",
+    "empleados=pd.DataFrame({\n",
+    "                    \"CodE\": [\"1\",\"2\",\"3\"],\n",
+    "                    \"Nombre\": [\"Prudencio Caminero\",\"Vicente Merario\",\"Valentin Siempre\"],\n",
+    "                    \"Sueldo\": [120000,110000,100000],\n",
+    "                    })\n",
+    "empleados\n",
+    "\n",
+    "empleados.to_sql(name='empleados',con=connection,if_exists=\"append\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Respuestas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Conectamos con la base de datos chinook.db\n",
+    "connection = sqlite3.connect(\"data/Bar_TB.db\")\n",
+    "\n",
+    "# Obtenemos un cursor que utilizaremos para hacer las queries\n",
+    "crsr = connection.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -251,103 +414,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CodC</th>\n",
-       "      <th>Enavase</th>\n",
-       "      <th>Capacidad</th>\n",
-       "      <th>Stock</th>\n",
+       "      <th>Nombre</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>01</td>\n",
-       "      <td>Botella</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>3600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>02</td>\n",
-       "      <td>Botella</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>1200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>03</td>\n",
-       "      <td>Lata</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>2400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>04</td>\n",
-       "      <td>Botella</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>288</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>05</td>\n",
-       "      <td>Barril</td>\n",
-       "      <td>60.00</td>\n",
-       "      <td>30</td>\n",
+       "      <td>Prudencio Caminero</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  CodC  Enavase  Capacidad  Stock\n",
-       "0   01  Botella       0.20   3600\n",
-       "1   02  Botella       0.33   1200\n",
-       "2   03     Lata       0.33   2400\n",
-       "3   04  Botella       1.00    288\n",
-       "4   05   Barril      60.00     30"
+       "               Nombre\n",
+       "0  Prudencio Caminero"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_sql(\"SELECT * FROM Cerveza\", connection)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Insertamos datos en la tabla Reparto\n",
-    "query_insert2 = \"\"\"\n",
-    "INSERT INTO Reparto (CodE, CodC, Fecha, Cantidad) VALUES\n",
-    "('1', '001', '01', '10/21/05', 240),\n",
-    "(2, 001, 02, 10/21/05, 48),\n",
-    "(3, 003, 01, 10/21/05, 240),\n",
-    "(4, 004, 01, 10/21/05, 240),\n",
-    "(5, 005, 01, 10/21/05, 240)\n",
+    "#1 Obtener  el  nombre    de  los  empleados   que  hayan  repartido  al  bar  Stop  durante la semana del 17 al 23 de octubre de 2005\n",
+    "query1 = \"\"\"\n",
+    "SELECT DISTINCT\n",
+    "e.Nombre\n",
+    "FROM empleados e\n",
+    "INNER JOIN reparto r\n",
+    "ON e.CodE = r.CodE\n",
+    "INNER JOIN bares b\n",
+    "ON b.CodB = r.CodB\n",
+    "WHERE b.Nombre = 'Stop' AND r.Fecha BETWEEN '2005-10-17' AND '2005-10-23'\n",
     "\"\"\"\n",
-    "\n",
-    "crsr.execute(query_insert2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.read_sql(\"SELECT * FROM Reparto\", connection)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Respuestas"
+    "sql_query(query1)"
    ]
   }
  ],
